<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
            tools:text="@string/activity_movie_detail_movie_title" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            tools:text="@string/activity_movie_detail_movie_year" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/yearTextView"
            tools:text="@string/activity_movie_detail_movie_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
            tools:itemCount="1"
            tools:listitem="@layout/trailer_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/trailersRecyclerView"
            tools:itemCount="1"
            tools:listitem="@layout/review_item" />

        <ImageView
            android:id="@+id/starImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12sp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@id/titleTextView"
            app:layout_constraintEnd_toEndOf="@id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
            app:srcCompat="@android:drawable/btn_star_big_on" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>